--- a/.github/workflows/oracle-db-backup-marshal.yml
+++ b/.github/workflows/oracle-db-backup-marshal.yml
@@ -21,6 +21,12 @@ on:
         type: string
         default: "main"
 
+# Allow permissions on repository and docker image and OIDC token
+permissions:
+  contents: read
+  packages: read
+  id-token: write  # This is required for requesting the JWT
+
 jobs:
   prepare-run-matrix:
     runs-on: ubuntu-latest
