--- a/.github/workflows/oracle-db-delius-configuration-artefacts.yml
+++ b/.github/workflows/oracle-db-delius-configuration-artefacts.yml
@@ -133,7 +133,7 @@ jobs:
       - name: Run Delius Artefacts Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $command -i $inventory \
+          $command -i $inventory -e -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
           -e @$inventory/group_vars/${{ steps.prepareinventorynames.outputs.allHost }}.yml \
           -e hosts=${{ steps.prepareinventorynames.outputs.hosts }} \
           -e deploy_audit=${{ github.event.inputs.DeployAudit }} \
