Double quote password

--- a/playbooks/oracle_dms_setup/dms_setup/tasks/create-dms-dblink.yml
+++ b/playbooks/oracle_dms_setup/dms_setup/tasks/create-dms-dblink.yml
@@ -131,7 +131,7 @@
       connect {{ dms_user }}/${DMS_PASSWORD}
 
       CREATE DATABASE LINK awsdms_dblink
-      CONNECT TO {{ dms_user }} IDENTIFIED BY ${DMS_PASSWORD}
+      CONNECT TO {{ dms_user }} IDENTIFIED BY "${DMS_PASSWORD}"
       USING '{{ delius_primary_sid | upper }}';
 
       connect / as sysdba
