--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -191,6 +191,16 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
+      - name: Generate Artifact
+        id: generate-artifact
+        run: mkdir -p artifact && echo "Hello World" > artifact/hello.txt
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-artifact
+          path: artifact/ß
+
       - name: Check And Set Backup Runtime
         id: check-and-set-backup-runtime
         shell: bash
@@ -205,13 +215,13 @@ jobs:
                 --value "{\"Phase\":\"Backup\",\"Status\":\"Initializing\",\"Message\":\"Running on $RmanTarget\",\"TargetEnvironment\":\"$TargetEnvironment\",\"RmanTarget\":\"$RmanTarget\",\"FixAbsentChunks\":\"$FixAbsentChunks\",\"VerboseOutput\":\"$VerboseOutput\"}" \
                 --description "Runtime phase and status details of RMAN backups running on the $RmanTarget host"
 
-      - name: Start Ansible Backup On Primary
-        id: backup
-        continue-on-error: true
-        run: |
-          export ANSIBLE_CONFIG=$ansible_config
-          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
-          $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$Period -e enable_trace=$EnableTrace -e ssm_parameter=$SSMParameter $VerboseOutput
+      # - name: Start Ansible Backup On Primary
+      #   id: backup
+      #   continue-on-error: true
+      #   run: |
+      #     export ANSIBLE_CONFIG=$ansible_config
+      #     ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
+      #     $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$Period -e enable_trace=$EnableTrace -e ssm_parameter=$SSMParameter $VerboseOutput
 
       # - name: Start Ansible Backup On First Standby (If Exists) If Primary Backup Failed
       #   if: ${{ steps.backup.outcome == 'failure' && contains(env.RmanTarget,'primarydb') }}
