--- a/.github/workflows/oracle-db-backup-marshal.yml
+++ b/.github/workflows/oracle-db-backup-marshal.yml
@@ -28,37 +28,68 @@ permissions:
   id-token: write  # This is required for requesting the JWT
 
 jobs:
-  prepare-run-matrix:
+  deployment:
+    name: Get Environments
     runs-on: ubuntu-latest
-    outputs:
-      validate_chunks_matrix: ${{ steps.prepare-next-steps.outputs.validate_chunks_matrix }}
-    steps: 
-      - name: Configure AWS Credentials
-        id: login-aws
-        uses: aws-actions/configure-aws-credentials@v4
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+    continue-on-error: false
+    steps:
+
+      - name: Checkout hmpps-delius-operation-automation
+        uses: actions/checkout@v4
         with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-          role-session-name: "oracle-backup-marshal-${{ github.run_number }}"
-          aws-region: "eu-west-2"
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oracle_backup/files/list_github_environments.py
+          path: operations
+          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
+          fetch-depth: 0
 
-      - name: Read Current Backup Runtime Information into JSON Variable
-        id: get-runtime-info
+      - name: List environments
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
-            SSM_PARAMETER_PATHS=$(aws ssm describe-parameters --query 'Parameters[*].Name' --parameter-filters "Key=Name,Option=BeginsWith,Values=/oracle-backups/" --output text)
-            SSM_PARAMETER_VALUES=$(aws ssm get-parameters --names ${SSM_PARAMETER_PATHS} --query "Parameters[*].Value" --output text)
-            # The following logic determines what needs to be done next:
-            # (1) Successful Backups may now proceed to Chunk Validation
-            VALIDATE_CHUNKS=$(echo $SSM_PARAMETER_VALUES | jq 'select (.FixAbsentChunks == "yes" and .Phase == "Backup" and .Status == "Success" and (.RmanTarget | contains("primarydb")))' | jq -s '.' | jq '{include: .}')
-            echo "validate_chunks_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
+          python operations/list_github_environments.py
 
-  validate-chunks:
-    needs: prepare-run-matrix
-    if: ${{ needs.prepare-run-matrix.outputs.validate_chunks_matrix != '{"include":[]}' }}
-    strategy:
-      matrix: ${{fromJson(needs.prepare-run-matrix.outputs.validate_chunks_matrix)}}
-    name: Validate Chunks
-    uses:
-      ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-validate-backups.yml@main
-    with:
-      TargetEnvironment: ${{ matrix.TargetEnvironment }}
-      TargetHost: ${{ matrix.TargetHost }}
+
+# jobs:
+#   prepare-run-matrix:
+#     runs-on: ubuntu-latest
+#     # environment: ${{needs.build_rman_target_name.outputs.TargetEnvironment}}
+#     # outputs:
+#     #   validate_chunks_matrix: ${{ steps.prepare-next-steps.outputs.validate_chunks_matrix }}
+#     strategy:
+#       matrix:
+
+#     steps: 
+#       - name: Configure AWS Credentials
+#         id: login-aws
+#         uses: aws-actions/configure-aws-credentials@v4
+#         with:
+#           role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+#           role-session-name: "oracle-backup-marshal-${{ github.run_number }}"
+#           aws-region: "eu-west-2"
+
+      # - name: Read Current Backup Runtime Information into JSON Variable
+      #   id: get-runtime-info
+      #   run: |
+      #       SSM_PARAMETER_PATHS=$(aws ssm describe-parameters --query 'Parameters[*].Name' --parameter-filters "Key=Name,Option=BeginsWith,Values=/oracle-backups/" --output text)
+      #       SSM_PARAMETER_VALUES=$(aws ssm get-parameters --names ${SSM_PARAMETER_PATHS} --query "Parameters[*].Value" --output text)
+      #       # The following logic determines what needs to be done next:
+      #       # (1) Successful Backups may now proceed to Chunk Validation
+      #       VALIDATE_CHUNKS=$(echo $SSM_PARAMETER_VALUES | jq 'select (.FixAbsentChunks == "yes" and .Phase == "Backup" and .Status == "Success" and (.RmanTarget | contains("primarydb")))' | jq -s '.' | jq '{include: .}')
+      #       echo "validate_chunks_matrix="$(echo ${SCHEDULED_JSON} | sed 's/ //g') >> $GITHUB_OUTPUT
+
+  # validate-chunks:
+  #   needs: prepare-run-matrix
+  #   if: ${{ needs.prepare-run-matrix.outputs.validate_chunks_matrix != '{"include":[]}' }}
+  #   strategy:
+  #     matrix: ${{fromJson(needs.prepare-run-matrix.outputs.validate_chunks_matrix)}}
+  #   name: Validate Chunks
+  #   uses:
+  #     ministryofjustice/hmpps-delius-operational-automation/.github/workflows/oracle-db-validate-backups.yml@main
+  #   with:
+  #     TargetEnvironment: ${{ matrix.TargetEnvironment }}
+  #     TargetHost: ${{ matrix.TargetHost }}
