--- a/.github/workflows/oracle-db-backup-marshal.yml
+++ b/.github/workflows/oracle-db-backup-marshal.yml
@@ -54,7 +54,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
-          ENVIRONMENTS=$(python operations/playbooks/oracle_backup/files/list_github_environments.py | grep -E "-preapproved$")
+          ENVIRONMENTS=$(python operations/playbooks/oracle_backup/files/list_github_environments.py | grep -E -- "-preapproved$")
           echo "environment_matrix="$(echo $ENVIRONMENTS | jq -sR 'split("\n") | map(select(. != ""))') >> $GITHUB_OUTPUT
 
 
