--- a/.github/workflows/oracle-db-backup-marshal.yml
+++ b/.github/workflows/oracle-db-backup-marshal.yml
@@ -55,6 +55,7 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
           ENVIRONMENTS=$(python operations/playbooks/oracle_backup/files/list_github_environments.py | grep -E -- "-preapproved$")
+          echo $ENVIRONMENTS
           echo "environment_matrix="$(echo $ENVIRONMENTS | jq -sR 'split("\n") | map(select(. != ""))') >> $GITHUB_OUTPUT
 
 
