--- a/.github/workflows/oracle-db-backup-marshal.yml
+++ b/.github/workflows/oracle-db-backup-marshal.yml
@@ -82,8 +82,7 @@ jobs:
       runs-on: ubuntu-latest
       needs: collate-environments
       strategy:
-        matrix:
-          value: ${{fromJson(needs.collate-environments.outputs.environment_matrix)}}
+        matrix: ${{fromJson(needs.collate-environments.outputs.environment_matrix)}}
       environment: ${{ matrix.environment }}
       container:
         image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
