--- a/.github/workflows/oracle-db-backup-marshal.yml
+++ b/.github/workflows/oracle-db-backup-marshal.yml
@@ -55,8 +55,8 @@ jobs:
           GITHUB_REPOSITORY: ${{ github.repository }}
         run: |
           ENVIRONMENTS=$(python operations/playbooks/oracle_backup/files/list_github_environments.py | grep -E -- "-preapproved$")
-          echo "environment_matrix="$(echo $ENVIRONMENTS | tr ' ' '\n' | jq -sR 'split("\n") | map(select(. != ""))' | jq '{include: .}')
-          echo "environment_matrix="$(echo $ENVIRONMENTS | tr ' ' '\n' | jq -sR 'split("\n") | map(select(. != ""))' | jq '{include: .}') >> $GITHUB_OUTPUT
+          echo "environment_matrix="$(echo $ENVIRONMENTS | tr ' ' '\n' | jq -sR 'split("\n") | map(select(. != ""))' )
+          echo "environment_matrix="$(echo $ENVIRONMENTS | tr ' ' '\n' | jq -sR 'split("\n") | map(select(. != ""))' ) >> $GITHUB_OUTPUT
 
 
 # jobs:
@@ -82,7 +82,8 @@ jobs:
       runs-on: ubuntu-latest
       needs: collate-environments
       strategy:
-        matrix: ${{fromJson(needs.collate-environments.outputs.environment_matrix)}}
+        matrix:
+          environment: ${{fromJson(needs.collate-environments.outputs.environment_matrix)}}
       environment: ${{ matrix.environment }}
       container:
         image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
