--- a/.github/workflows/test-action-start.yml
+++ b/.github/workflows/test-action-start.yml
@@ -9,8 +9,48 @@ on:
 jobs:
   show_token:
     runs-on: ubuntu-latest
+    environment: delius-core-dev-preapproved
+    env:
+      test_command: ansible-playbook operations/playbooks/test_action/tasks/main.yml
+      inventory: inventory/ansible
     steps:
+
+      - name: Checkout hmpps-delius-operation-automation
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/test_action
+            playbooks/ansible.cfg
+          path: operations
+          ref: DBA-667-REPO
+          fetch-depth: 0
+
+      - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
       - name: Show Github Token
         id: preparermantargetname
         run: |
           echo "${{ secrets.GITHUB_TOKEN}}"
+
+      - name: Run Test Action
+        run: |
+            export ANSIBLE_CONFIG=$ansible_config
+            $test_command -vv -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e test_target=environment_name_delius_core_development_delius_primarydb
