--- a/.github/workflows/test-action-start.yml
+++ b/.github/workflows/test-action-start.yml
@@ -57,11 +57,11 @@ jobs:
       - name: Show Github Token
         id: preparermantargetname
         run: |
-          echo "${{ secrets.GITHUB_TOKEN}}"
+          echo "${{ github.token }}"
 
       - name: Run Test Action
         run: |
             export ANSIBLE_CONFIG=$ansible_config
             $test_command -vv -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e github_token=${GITHUB_TOKEN} -e test_target=environment_name_delius_core_development_dev_delius_primarydb
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
