--- a/playbooks/test_action/tasks/main.yml
+++ b/playbooks/test_action/tasks/main.yml
@@ -8,5 +8,5 @@
   tasks:
     - name: Show Token
       shell: |
-             echo "1: {{ lookup('env','GITHUB_TOKEN') }}"
+             echo "1: {{ lookup('env','GITHUB_TOKEN') | list | join('-') }}"
              echo "2: {{ github_token }}"
