--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -126,7 +126,9 @@ jobs:
               fi
           else
              echo "JSON: ${{ github.event.inputs.ParametersJSON }}"
-             exit 123
+             PARAMETERS_JSON=$(echo ${{ github.event.inputs.ParametersJSON }})
+             TargetHost=$(echo ${PARAMETER_JSON} | jq -r '.target_host')
+             TargetEnvironment=$(echo ${PARAMETER_JSON} | jq -r '.target_environment')
           fi
           RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
           echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
