--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -127,9 +127,9 @@ jobs:
           else
              echo "JSON: ${{ github.event.inputs.ParametersJSON }}"
              PARAMETERS_JSON=$(echo ${{ github.event.inputs.ParametersJSON }})
-             TargetHost=$(echo ${PARAMETER_JSON} | jq -r '.target_host')
+             TargetHost=$(echo ${PARAMETERS_JSON} | jq -r '.target_host')
              echo "TargetHost: $TargetHost"
-             TargetEnvironment=$(echo ${PARAMETER_JSON} | jq -r '.target_environment')
+             TargetEnvironment=$(echo ${PARAMETERS_JSON} | jq -r '.target_environment')
              echo "TargetEnvironment: $TargetEnvironment"
           fi
           RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
