--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -37,8 +37,11 @@ on:
           - "weekly"
       BackupStandbyOnPrimaryFailure:
         description: "Retry the backup on the standby if primary backup fails"
-        type: boolean
-        default: true
+        type: choice
+        default: "yes"
+        options: 
+          - "yes"
+          - "no"
       FixAbsentChunks:
         description: "Validate and fix absent S3 missing backup chunks"
         type: choice
@@ -106,10 +109,13 @@ jobs:
     outputs:
       RmanTarget: ${{ steps.preparermantargetname.outputs.RmanTarget }}
       TargetEnvironment: ${{ steps.preparermantargetname.outputs.TargetEnvironment }}-preapproved
+      BackupStatus: ${{ steps.preparermantargetname.outputs.BackupStatus }}
+      BackupStandbyOnPrimaryFailure: ${{ steps.preparermantargetname.outputs.BackupStandbyOnPrimaryFailure }}
     steps:
       - name: Prepare Rman Target
         id: preparermantargetname
         run: |
+          BackupStatus=starting
           if [[ -z "${{ github.event.inputs.ParametersJSON }}" ]];
           then
               if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]
@@ -131,10 +137,16 @@ jobs:
              echo "TargetHost: $TargetHost"
              TargetEnvironment=$(echo ${PARAMETERS_JSON} | jq -r '.target_environment')
              echo "TargetEnvironment: $TargetEnvironment"
+             BackupStatus=$(echo ${PARAMETERS_JSON} | jq -r '.backup_status')
+             if [[ "$BackupStatus" == "failed" ]];
+             then
+                BackupStandbyOnPrimaryFailure=$(echo ${PARAMETERS_JSON} | jq -r '.backup_standby_on_primary_failure')
+             fi
           fi
           RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
           echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
           echo "TargetEnvironment=$TargetEnvironment" >> $GITHUB_OUTPUT
+          echo "BackupError=$BackupError" >> $GITHUB_OUTPUT
 
   # Start deployment container job based on the build delius-ansible-aws image
   deployment:
@@ -155,6 +167,8 @@ jobs:
       RmanTarget: "${{needs.build_rman_target_name.outputs.RmanTarget}}"
       TargetEnvironment: "${{needs.build_rman_target_name.outputs.TargetEnvironment}}"
       SSMParameter: "/oracle-backups/${{needs.build_rman_target_name.outputs.RmanTarget}}"
+      BackupStatus: "${{needs.build_rman_target_name.outputs.BackupStatus}}"
+      BackupStandbyOnPrimaryFailure: "${{needs.build_rman_target_name.outputs.BackupStandbyOnPrimaryFailure}}"
       ansible_config: operations/playbooks/ansible.cfg
     continue-on-error: false
     steps:
@@ -216,10 +230,49 @@ jobs:
                 --value "{\"Phase\":\"Backup\",\"Status\":\"Initializing\",\"Message\":\"Running on $RmanTarget\",\"TargetEnvironment\":\"$TargetEnvironment\",\"RmanTarget\":\"$RmanTarget\",\"FixAbsentChunks\":\"$FixAbsentChunks\",\"VerboseOutput\":\"$VerboseOutput\"}" \
                 --description "Runtime phase and status details of RMAN backups running on the $RmanTarget host"
 
+      # Only run backup on primary if that is the target host and no error has already occurred
       - name: Start Ansible Backup On Primary
+        if: contains(env.RmanTarget,'primarydb') && env.BackupStatus == 'starting'
         id: backup
-        continue-on-error: true
+        continue-on-error: false
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
           $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$Period -e enable_trace=$EnableTrace -e ssm_parameter=$SSMParameter $VerboseOutput
+
+      - name: Start Ansible Backup On First Standby (If Exists) If Primary Backup Failed
+        if: contains(env.RmanTarget,'primarydb') && env.BackupStatus == 'failed' && env.BackupStandbyOnPrimaryFailure == 'yes'
+        shell: bash
+        run: |
+            if [[ -e ${inventory}/group_vars/${RmanTarget/primarydb/standbydb1}.yml ]]
+            then
+              RmanTarget=${RmanTarget/primarydb/standbydb1}
+              echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
+              export ANSIBLE_CONFIG=$ansible_config
+              ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
+              $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=${RmanTarget} -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
+            else
+              echo "Standby Not Configured"
+            fi
+
+      - name: Start Ansible Backup On Second Standby (If Exists) If First Standby Backup Failed
+        if: contains(env.RmanTarget,'standbydb1') && env.BackupStatus == 'failed' && env.BackupStandbyOnPrimaryFailure == 'yes'
+        shell: bash
+        run: |
+            if [[ -e ${inventory}/group_vars/${RmanTarget/primarydb/standbydb2}.yml ]]
+            then
+              RmanTarget=${RmanTarget/primarydb/standbydb2}
+              echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
+              export ANSIBLE_CONFIG=$ansible_config
+              ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
+              $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=${RmanTarget} -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
+            else
+              echo "Second Standby Not Configured"
+            fi
+
+
+      - name: Start Ansible Validate And Fix Absent Chunks
+        run: |
+          export ANSIBLE_CONFIG=$ansible_config
+          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
+          $validate_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e fix_absent_chunks=$FixAbsentChunks $VerboseOutput
