--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -163,20 +163,17 @@ jobs:
                 BackupStandbyOnPrimaryFailure=$(echo ${PARAMETERS_JSON} | jq -r '.backup_standby_on_primary_failure')
              fi
           fi
-          Inputs=$(cat <<-'EOF'
-          {
-            "TargetEnvironment": "$TargetEnvironment",
-            "TargetHost": "$TargetHost",
-            "Period": "$Period",
-            "BackupStandbyOnPrimaryFailure": "$BackupStandbyOnPrimaryFailure",
-            "FixAbsentChunks": "$FixAbsentChunks",
-            "EnableTrace": "$EnableTrace",
-            "VerboseOutput": "$VerboseOutput",
-            "SourceCodeVersion": "$SourceCodeVersion",
-            "SourceConfigVersion" "$SourceConfigVersion"
-          }
-          EOF
-          )
+          Inputs="{"
+          Inputs=$Inputs"\"TargetEnvironment\": \"$TargetEnvironment\","
+          Inputs=$Inputs"\"TargetHost\": \"$TargetHost\","
+          Inputs=$Inputs"\"Period\": \"$Period\","
+          Inputs=$Inputs"\"BackupStandbyOnPrimaryFailure\": \"$BackupStandbyOnPrimaryFailure\","
+          Inputs=$Inputs"\"FixAbsentChunks\": \"$FixAbsentChunks\","
+          Inputs=$Inputs"\"EnableTrace\": \"$EnableTrace\","
+          Inputs=$Inputs"\"VerboseOutput\": \"$VerboseOutput\","
+          Inputs=$Inputs"\"SourceCodeVersion\": \"$SourceCodeVersion\","
+          Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\""
+          Inputs=$Inputs"}"
           RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
           echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
           echo "TargetEnvironment=$TargetEnvironment" >> $GITHUB_OUTPUT
