--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -111,7 +111,6 @@ jobs:
       TargetEnvironment: ${{ steps.preparermantargetname.outputs.TargetEnvironment }}-preapproved
       BackupStatus: ${{ steps.preparermantargetname.outputs.BackupStatus }}
       BackupStandbyOnPrimaryFailure: ${{ steps.preparermantargetname.outputs.BackupStandbyOnPrimaryFailure }}
-      Period: ${{ steps.preparermantargetname.outputs.Period }}
       FixAbsentChunks: ${{ steps.preparermantargetname.outputs.FixAbsentChunks }}
       EnableTrace: ${{ steps.preparermantargetname.outputs.EnableTrace }}
       VerboseOutput: ${{ steps.preparermantargetname.outputs.VerboseOutput }}
@@ -177,7 +176,6 @@ jobs:
           Inputs=$Inputs"\"SourceConfigVersion\": \"$SourceConfigVersion\""
           Inputs=$Inputs"}"
           RmanTarget="environment_name_$(echo $TargetEnvironment | sed 's/delius-core-dev/delius_core_development_dev/;s/delius-core-test/delius_core_test_test/;s/delius-core-training/delius_core_test_training/;s/delius-core-stage/delius_core_preproduction_stage/;s/delius-core-pre-prod/delius_core_preproduction_pre_prod/;s/delius-core-prod/delius_core_production_prod/')_$TargetHost"
-          # Some of the following variables are also written to the JSON Inputs but we expand them out here for ease of access
           echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
           echo "TargetEnvironment=$TargetEnvironment" >> $GITHUB_OUTPUT
           echo "BackupStatus=$BackupStatus" >> $GITHUB_OUTPUT
@@ -206,7 +204,6 @@ jobs:
       backup_command: ansible-playbook operations/playbooks/oracle_backup/backup.yml
       validate_command: ansible-playbook operations/playbooks/oracle_backup/validate.yml
       inventory: inventory/ansible
-      Period: "${{needs.build_rman_target_name.outputs.Period}}"
       FixAbsentChunks: "${{needs.build_rman_target_name.outputs.FixAbsentChunks}}"
       EnableTrace: "${{needs.build_rman_target_name.outputs.EnableTrace}}"
       VerboseOutput: "${{needs.build_rman_target_name.outputs.VerboseOutput}}"
@@ -288,7 +285,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
-          $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$Period -e enable_trace=$EnableTrace -e ssm_parameter=$SSMParameter $VerboseOutput
+          $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=$RmanTarget -e daily_weekly=$(echo "$Inputs" | jq -r '.Period' ) -e enable_trace=$EnableTrace -e ssm_parameter=$SSMParameter $VerboseOutput
 
       - name: Start Ansible Backup On First Standby (If Exists) If Primary Backup Failed
         if: contains(env.RmanTarget,'primarydb') && env.BackupStatus == 'failed' && env.BackupStandbyOnPrimaryFailure == 'yes'
@@ -300,7 +297,7 @@ jobs:
               echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
               export ANSIBLE_CONFIG=$ansible_config
               ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
-              $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=${RmanTarget} -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
+              $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=${RmanTarget} -e daily_weekly=$(echo "$Inputs" | jq -r '.Period' ) -e enable_trace=$EnableTrace $VerboseOutput
             else
               echo "Standby Not Configured"
               echo "BackupStatus=fatal" >> $GITHUB_OUTPUT
@@ -316,7 +313,7 @@ jobs:
               echo "RmanTarget=$RmanTarget" >> $GITHUB_OUTPUT
               export ANSIBLE_CONFIG=$ansible_config
               ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_backup/roles
-              $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=${RmanTarget} -e daily_weekly=$Period -e enable_trace=$EnableTrace $VerboseOutput
+              $backup_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e rman_target=${RmanTarget} -e daily_weekly=$(echo "$Inputs" | jq -r '.Period' ) -e enable_trace=$EnableTrace $VerboseOutput
             else
               echo "Second Standby Not Configured"
               echo "BackupStatus=fatal" >> $GITHUB_OUTPUT
