--- a/.github/workflows/oracle-db-duplicate.yml
+++ b/.github/workflows/oracle-db-duplicate.yml
@@ -352,7 +352,8 @@ jobs:
         working-directory: ${{ env.inventory }}
         id: preparation
         shell: bash
-        run: OemTarget=environment_name_$(echo ${{ needs.oracle-rman-pre-duplicate.outputs.TargetOemEnvironment }} | sed 's/-/_') >> $GITHUB_OUTPUT
+        run: |
+          OemTarget=environment_name_$(echo ${{ needs.oracle-rman-pre-duplicate.outputs.TargetOemEnvironment }} | sed 's/-/_') >> $GITHUB_OUTPUT
         
       - name: Configure AWS Credentials
         id: login-aws
